Made Changes to CSS, added pagination

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -10,4 +10,17 @@
                 <p>{{ post.text|linebreaksbr }}</p>
             </div>
         {% endfor %}
+        <div class="pagination">
+                <span class="step-links">
+                        {% if posts.has_previous %}
+                                <a href="?page={{ posts.previous_page_number }}">previous</a>
+                        {% endif %}
+
+                        <span class="current">
+                                Page {{ posts.number }} of {{ posts.paginator.num_pages }}.
+
+                        {% if posts.has_next %}
+                            <a href="?page={{ posts.next_page_number }}">next</a>
+                        {% endif %}
+
 {% endblock %}
