--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -4,10 +4,7 @@ h1 a {
     font-family: 'Lobster'
 }
 
-body {
-    padding-left: 15px;
-    
-}
+
 
 .page-header {
     background-color: #ff9400;
@@ -22,7 +19,7 @@ body {
 }
 
 .content {
-    margin-left: 40px;
+    margin: auto;
 
 }
 
@@ -53,11 +50,25 @@ h1, h2, h3, h4 {
 
 .post {
     margin-bottom: 70px;
+    margin:auto;
+    border-style:dotted;
+    background-color: ivory;
 }
 
-
+.post p{
+    padding-left:15px;
+}
 
 .post h1 a, .post h1 a:visited {
     color: #000000;
 }
 
+.col-md-8{
+    margin:auto;
+}
+
+.row {
+    margin-right: auto;
+    width: 720px;
+    margin-left: auto;
+}
