--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -4,6 +4,12 @@
 
 <html>
     <head>
+        <style>
+            body {
+                background:url('http://www.vectordiary.com/wp-content/uploads/2013/12/geo-seamless-pattern.jpg');
+
+            }
+        </style>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
@@ -14,6 +20,7 @@
     <div class="page-header">
         {% if user.is_authenticated %}
             <a href ="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+            <a href "{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphocon-edit"></span></a>
         {% endif %}
         <h1><a href="/">Animales Siendo pesaos</a></h1>
     </div>
