--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -4,13 +4,15 @@
     <div class="post">
         {% if post.published_date %}
             <div class='date'>
-                {{ post.published_date }}
+                {{ post.published_date|date:'d-m-Y'  }}
             </div>
+        {% else %}
+            <a class="btn btn-default" href="{% url 'post_publish' pk=post.pk %}">Publish</a>
         {% endif %}
         {% if user.is_authenticated %}
             <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
         {% endif %}
         <h1>{{ post.title }}</h1>
-        <p>{{ post.text }}</p>
+        <p>{{ post.text|truncatechars:200 }}</p>
     </div>
 {% endblock %}
