--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -3,9 +3,15 @@
 {% block content %}
         {% for post in posts %}
             <div class='post'>
-                <div class="date">
+            <div class="date">
                     <p>published: {{ post.published_date }}</p>
                 </div>
+                {% if post.image %}
+                    <div class="image">
+                        <img src="{{ post.image.url }}">
+                    </div>
+                {% endif %}
+                
                 <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
                 <p>{{ post.text|linebreaksbr }}</p>
             </div>
