--- a/blog/templates/blog/post_edit.html
+++ b/blog/templates/blog/post_edit.html
@@ -5,4 +5,5 @@
         {{ form.as_p }}
         <button type="submit" class="save btn btn-default">Save</button>
     </form>
+    <!-- To-do: add a cloudinary thumbnail, but make it so the image cannot be changed -->
 {% endblock %}
