--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -4,7 +4,18 @@ h1 a {
     font-family: 'Lobster'
 }
 
+* {
 
+    box-sizing: border-box;
+}
+
+div{
+    display:block;
+}
+
+img{
+    border:0;
+}
 
 .page-header {
     background-color: #ff9400;
@@ -17,12 +28,29 @@ h1 a {
     font-size: 36pt;
     text-decoration: none;
 }
+@media (max-width: 480px)
+.container {
+    display: inline-block;
+}
 
-.content {
-    margin: auto;
+.container {
+    width:100%;
+    max-width:980px;
+    margin: 0 auto 1rem;
+    position:relative;
 
 }
 
+@media (max-width: 480px)
+.container .content {
+    padding-top:1rem;
+}
+
+.container .content {
+    padding:1.5rem 0 0;
+    margin:0;
+    width: auto;
+}
 h1, h2, h3, h4 {
     font-family: 'Lobster', cursive;
 }
@@ -39,20 +67,55 @@ h1, h2, h3, h4 {
     width: 100%;
 }
 
+#posts {
+    float:left;
+    width:100%;
+}
 
+@media (max-width: 480px)
+#posts .post {
+    padding-bottom:1rem;
+}
 
+#posts .post {
+    padding-bottom:4rem;
+    position:relative;
+    overflow-x:hidden;/* research this */
+}
+
+.post{
+    padding:8px;
+    overflow:hidden;
+}
+.post p {
+    padding:0 .5rem;
+    margin:1.1rem 0;
+    font-size:.9rem;
+    line-height:1.333em;
+    color:#222;
+}
+.post p.hasImg {
+    padding:0;
+    margin:0;
+}
+
+.post img {
+    width:100%;
+    height:auto;
+}
 .top-menu, .top-menu:hover, .top-menu:visited {
     color: #ffffff;
     float: right;
     font-size: 26pt;
     margin-right: 20px;
 }
-
+/*
 .post {
     margin-bottom: 70px;
     margin:auto;
     border-style:dotted;
     background-color: ivory;
+    width:500px;
 }
 
 .post p{
@@ -62,7 +125,7 @@ h1, h2, h3, h4 {
 .post h1 a, .post h1 a:visited {
     color: #000000;
 }
-
+*/
 .col-md-8{
     margin:auto;
 }
@@ -72,3 +135,18 @@ h1, h2, h3, h4 {
     width: 720px;
     margin-left: auto;
 }
+
+div > img {
+    margin: 10px 10px 10px 0px;
+    border: 1px solid #ccc;
+    float: left;
+    width: 100%;
+}
+
+.image {
+    width:100%;
+    height:100%;
+    margin: 10px 10px 10px 0px;
+    border: 1px solid #ccc;
+}
+
