--- a/blog/templates/blog/post_new_image.html
+++ b/blog/templates/blog/post_new_image.html
@@ -2,10 +2,10 @@
 {% block content %}
     <div id="direct_upload">
         <h1>New Image Post</h1>
-        <form  action="{% url 'blog.views.post_new_image' %}" method="POST" class="post-form">
+        <form action="{% url 'blog.views.post_new_image' %}" method="post" class="post-form" enctype="multipart/form-data">
             {% csrf_token %}
             {{ form }}
-            <button type="submit" class="save btn btn-default">Save</button>
+            <button type="submit" class="save btn btn-default" value="Upload">Save</button>
         </form>
     
         <div class="uploader_info_holder">
@@ -15,27 +15,25 @@
 {% endblock %}
 {% block javascript %}
     $(function () {
-        $('#direct_upload input[type="file"]').cloudinary_fileupload({
+        $('#direct_upload input[type="file"]').cloudinary_fileupload(
+            { dropZone: '#direct_upload'})
+    });
+  
+{% endblock %}
+
+<!-- {
             dropZone: '#direct_upload',
             start: function () {
                 $('.status_value').text('Starting direct upload...');
             },
-        progress: function () {
-            $('.status_value').text('Uploading...');
+            progress: function () {
+                $('.status_value').text('Uploading...');
             },
-        }).on('cloudinarydone', function (e, data) {
+
+            on('cloudinarydone', function (e, data) {
             $('.status_value').text('Updating backend...');
             $.post(this.form.action, $(this.form).serialize()).always(function (result, status, jqxhr) {
             $('.status_value').text(result.errors ? JSON.stringify(result.errors) : status);
         });
-        var info = $('<div class="uploaded_info"/>');
-        $(info).append($('<div class="data"/>').append(prettydump(data.result)));
-        $(info).append($('<div class="image"/>').append(
-           $.cloudinary.image(data.result.public_id, {
-           format: data.result.format, width: 150, height: 150, crop: "fill"
-           })
-        ));
-        $('.uploaded_info_holder').append(info);
-        });
-    });
-{% endblock %}
+
+            -->
